# ur3-control

./: .gitignore  CMakeLists.txt  Network Persistent State  QuotaManager  README.md  TransportSecurity  empty_world_server.launch  machineid  package.xml  pick_function  scena_workshell.scene  storage.json
Backups/: workspaces.json
Cache/: 3e371ef0262de609_0  625bbe30771f2f39_0  b458d1b6e7e76a6a_0  c85687354a0e770a_0  cbc42e4c979f69f0_0
Cache/index-dir/: the-real-index
CachedData/7f6ab5485bbc008386c4386d08766667e155244e/: agent-2a8ffa269fcaa48602fc2752c52ebce7.code  agent-44dea5e1cdc0a430cd856f3ab0b3a6c0.code  agent-670cc96e06ab4f0e2cac1425249460de.code  agent-df337805767be735ebe98d47fba46ab6.code  bindings-5f149bbc464abc43a37acedb30314297.code  bindings-7892486a01de832d86c094006e8c9daa.code  clone-59a0bdff9dccba60a7f2dd884c86a808.code  clone-5cca3fb353a1b18779e73ac3bb6bdd95.code  clone-6f38514ee2887d377722e63141ab545f.code  clone-8ed2a3ea49bf8cd79afb7ff671446f53.code  clone-d3ad61ed020f252e351a318a5c2b3f8e.code  common-25558d61ef50e90a84713b0f814c3084.code  common-3c8e27fc52ff12de8c0b624299241329.code  common-435f5e6e12731020fe989c3ca6531a37.code  (+188 more)
CachedExtensions/: builtin  user
Crash Reports/: client_id
GPUCache/: data_1  index
Local Storage/leveldb/: LOG  LOG.old
QT/: manual_pose.ui  screen_automazione.ui  screen_joystick.ui  screen_main.ui  user_interface.py
Session Storage/: LOG
User/: keybindings.json
code/: CMakeLists.txt  package.xml
config/: constraints.yaml
exthost Crash Reports/: client_id
franci/: .init.launch.swp  init.launch  kill_node.launch
launch/: init.launch  init_py.launch  launcher.launch  launcher_gara.launch  user_interface.launch
msg/: cv_to_bridge.msg
scripts/: UI_gara.py  collision_interface.py  control_py  prova.py  solve_equation.py
src/: ERC.cpp  ERC.cpp.autosave  bridge.cpp  library.h  prova_cpp.cpp
srv/: UserInterface.srv  aruco_service.srv  collision_object_srv.srv  cv_server.srv  float_return_srv.srv
txt/: .example.csv.swp  aruco_table.csv  aruco_values.txt  example.csv  standard_positions.txt
ur3-control/: README.md  package.xml
(+49 files in other folders)
